--- a/src/native/androidProject/app/src/main/res/xml/file_paths.xml
+++ b/src/native/androidProject/app/src/main/res/xml/file_paths.xml
@@ -9,4 +9,10 @@
     <files-path
         name="internal_files"
         path="." />
+    <cache-path
+        name="cache"
+        path="." />
+    <cache-path
+        name="downloaded_files"
+        path="downloaded_files" />
 </paths>
