--- a/src/native/androidProject/app/src/main/res/values/themes.xml
+++ b/src/native/androidProject/app/src/main/res/values/themes.xml
@@ -10,6 +10,9 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
+        <!-- Splash Screen -->
+        <item name="android:windowSplashScreenBackground">@color/purple_500</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
